ingress.yml
# Simplest possible Ingress, which sets up a Google Cloud LB (see ingress.class)
# The spec may have many more rules for routing, load balancing, TLS, and so forth
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-api-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"  # Or "gce", which makes use of GKE's ingress controller
    #nginx.ingress.kubernetes.io/rewrite-target: /
    #nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - localhost
      secretName: hello-kubernetes-tls
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-nodejs
                port:
                  number: 80
